--- a/about-us.htm
+++ b/about-us.htm
@@ -124,16 +124,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-141010.htm" title="手把手教你解决V2Ray安装失败的疑难杂症">手把手教你解决V2Ray安装失败的疑难杂症</a></li>
-                        <li class="py-2"><a href="/news/article-139937.htm" title="安卓用户必备：2024年最全科学上网工具指南与深度体验报告">安卓用户必备：2024年最全科学上网工具指南与深度体验报告</a></li>
-                        <li class="py-2"><a href="/news/article-144518.htm" title="如何挑选高性价比服务器搭建V2Ray？一份实用指南">如何挑选高性价比服务器搭建V2Ray？一份实用指南</a></li>
-                        <li class="py-2"><a href="/news/article-132867.htm" title="手机端高效翻墙指南：V2Ray科学上网全攻略">手机端高效翻墙指南：V2Ray科学上网全攻略</a></li>
                         <li class="py-2"><a href="/news/article-141646.htm" title="全面解析6s科学上网：解锁数字世界的钥匙与使用全攻略">全面解析6s科学上网：解锁数字世界的钥匙与使用全攻略</a></li>
-                        <li class="py-2"><a href="/news/article-136009.htm" title="深度剖析：Clash代理工具安装失败的根源与终极解决方案">深度剖析：Clash代理工具安装失败的根源与终极解决方案</a></li>
-                        <li class="py-2"><a href="/news/article-135468.htm" title="斐讯K2路由器安装Clash全攻略：从理论到实践的完整指南">斐讯K2路由器安装Clash全攻略：从理论到实践的完整指南</a></li>
-                        <li class="py-2"><a href="/news/article-137793.htm" title="安卓设备科学上网全攻略：轻松解锁豆瓣优质内容">安卓设备科学上网全攻略：轻松解锁豆瓣优质内容</a></li>
-                        <li class="py-2"><a href="/news/article-142004.htm" title="掌握Clash的秘诀：高效记忆与灵活运用的终极指南">掌握Clash的秘诀：高效记忆与灵活运用的终极指南</a></li>
-                        <li class="py-2"><a href="/news/article-137081.htm" title="梅林固件与V2Ray离线配置全攻略：解锁无网环境下的安全通道">梅林固件与V2Ray离线配置全攻略：解锁无网环境下的安全通道</a></li>
+                        <li class="py-2"><a href="/news/article-143430.htm" title="赤瞳clash深度攻略：从入门到精通的全面指南">赤瞳clash深度攻略：从入门到精通的全面指南</a></li>
+                        <li class="py-2"><a href="/news/article-138855.htm" title="V2Ray免费节点获取与使用全攻略：从入门到精通">V2Ray免费节点获取与使用全攻略：从入门到精通</a></li>
+                        <li class="py-2"><a href="/news/article-145926.htm" title="全面解析科学上网手机版：解锁数字世界的自由与安全">全面解析科学上网手机版：解锁数字世界的自由与安全</a></li>
+                        <li class="py-2"><a href="/news/article-143789.htm" title="彻底解决v2ray PAC失效难题：从原理到实战的完整指南">彻底解决v2ray PAC失效难题：从原理到实战的完整指南</a></li>
+                        <li class="py-2"><a href="/news/article-145245.htm" title="英雄联盟玩家必备：LOL科学上网全攻略与深度解析">英雄联盟玩家必备：LOL科学上网全攻略与深度解析</a></li>
+                        <li class="py-2"><a href="/news/article-134324.htm" title="解密v2rayng：一款改变网络自由体验的安卓代理神器">解密v2rayng：一款改变网络自由体验的安卓代理神器</a></li>
+                        <li class="py-2"><a href="/news/article-139233.htm" title="宝塔面板与V2Ray完美共存：一站式服务器代理解决方案深度解析">宝塔面板与V2Ray完美共存：一站式服务器代理解决方案深度解析</a></li>
+                        <li class="py-2"><a href="/news/article-134071.htm" title="安卓免流神器V2RayNG：从零开始掌握免流脚本配置全攻略">安卓免流神器V2RayNG：从零开始掌握免流脚本配置全攻略</a></li>
+                        <li class="py-2"><a href="/news/article-135096.htm" title="深度探索AC2100 Clash：从安装到精通的全方位网络管理指南">深度探索AC2100 Clash：从安装到精通的全方位网络管理指南</a></li>
                     </ul>
     </div>
 </div>
@@ -145,7 +145,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">13</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
+                <h4><span class="badge" style="float: right;">19</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">26</span> <a href="/date/2025-07/" title="2025-07 归档">2025-07</a></h4>
