--- a/client.htm
+++ b/client.htm
@@ -275,16 +275,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-132483.htm" title="电视端Clash启动失败的终极解决方案：从排查到优化全指南">电视端Clash启动失败的终极解决方案：从排查到优化全指南</a></li>
-                        <li class="py-2"><a href="/news/article-138855.htm" title="V2Ray免费节点获取与使用全攻略：从入门到精通">V2Ray免费节点获取与使用全攻略：从入门到精通</a></li>
+                        <li class="py-2"><a href="/news/article-140653.htm" title="深度解析：Quantumult中间按钮消失的全面解决方案">深度解析：Quantumult中间按钮消失的全面解决方案</a></li>
+                        <li class="py-2"><a href="/news/article-144879.htm" title="解密Clash小姐姐：新一代智能代理工具的全方位指南与深度评测">解密Clash小姐姐：新一代智能代理工具的全方位指南与深度评测</a></li>
+                        <li class="py-2"><a href="/news/article-140293.htm" title="全面指南：如何根据需求选择最适合的Clash版本">全面指南：如何根据需求选择最适合的Clash版本</a></li>
+                        <li class="py-2"><a href="/news/article-147078.htm" title="突破网络边界：谷歌科学上网扩展完全使用手册">突破网络边界：谷歌科学上网扩展完全使用手册</a></li>
+                        <li class="py-2"><a href="/news/article-133136.htm" title="解密Clash V2的"钢铁之躯"：深度剖析代理工具的稳定性与抗压能力">解密Clash V2的"钢铁之躯"：深度剖析代理工具的稳定性与抗压能力</a></li>
+                        <li class="py-2"><a href="/news/article-142372.htm" title="突破网络边界：flyzy小站科学上网全攻略与深度体验">突破网络边界：flyzy小站科学上网全攻略与深度体验</a></li>
+                        <li class="py-2"><a href="/news/article-139233.htm" title="宝塔面板与V2Ray完美共存：一站式服务器代理解决方案深度解析">宝塔面板与V2Ray完美共存：一站式服务器代理解决方案深度解析</a></li>
+                        <li class="py-2"><a href="/news/article-146705.htm" title="突破网络边界：二师兄科学上网工具全方位使用指南与深度解析">突破网络边界：二师兄科学上网工具全方位使用指南与深度解析</a></li>
                         <li class="py-2"><a href="/news/article-143789.htm" title="彻底解决v2ray PAC失效难题：从原理到实战的完整指南">彻底解决v2ray PAC失效难题：从原理到实战的完整指南</a></li>
-                        <li class="py-2"><a href="/news/article-135639.htm" title="国内使用Clash代理工具全解析：合法风险、实用指南与深度思考">国内使用Clash代理工具全解析：合法风险、实用指南与深度思考</a></li>
-                        <li class="py-2"><a href="/news/article-136723.htm" title="全面解析搬瓦工V2Ray域名：从申请到配置的完整指南">全面解析搬瓦工V2Ray域名：从申请到配置的完整指南</a></li>
-                        <li class="py-2"><a href="/news/article-142004.htm" title="掌握Clash的秘诀：高效记忆与灵活运用的终极指南">掌握Clash的秘诀：高效记忆与灵活运用的终极指南</a></li>
-                        <li class="py-2"><a href="/news/article-132867.htm" title="手机端高效翻墙指南：V2Ray科学上网全攻略">手机端高效翻墙指南：V2Ray科学上网全攻略</a></li>
-                        <li class="py-2"><a href="/news/article-137436.htm" title="斐讯K3路由器科学上网全攻略：从基础设置到高级配置详解">斐讯K3路由器科学上网全攻略：从基础设置到高级配置详解</a></li>
-                        <li class="py-2"><a href="/news/article-141646.htm" title="全面解析6s科学上网：解锁数字世界的钥匙与使用全攻略">全面解析6s科学上网：解锁数字世界的钥匙与使用全攻略</a></li>
-                        <li class="py-2"><a href="/news/article-142726.htm" title="2018年8月：突破网络边界的终极科学上网指南">2018年8月：突破网络边界的终极科学上网指南</a></li>
+                        <li class="py-2"><a href="/news/article-132128.htm" title="SSR与V2Ray深度对比：从技术原理到实战选择的终极指南">SSR与V2Ray深度对比：从技术原理到实战选择的终极指南</a></li>
                     </ul>
     </div>
 </div>
@@ -296,7 +296,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">13</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
+                <h4><span class="badge" style="float: right;">19</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">26</span> <a href="/date/2025-07/" title="2025-07 归档">2025-07</a></h4>
