--- a/date/2025-07/page-3.htm
+++ b/date/2025-07/page-3.htm
@@ -211,16 +211,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-136723.htm" title="全面解析搬瓦工V2Ray域名：从申请到配置的完整指南">全面解析搬瓦工V2Ray域名：从申请到配置的完整指南</a></li>
+                        <li class="py-2"><a href="/news/article-135096.htm" title="深度探索AC2100 Clash：从安装到精通的全方位网络管理指南">深度探索AC2100 Clash：从安装到精通的全方位网络管理指南</a></li>
                         <li class="py-2"><a href="/news/article-133464.htm" title="解密SS科学上网与合购服务：经济实惠的网络自由之路">解密SS科学上网与合购服务：经济实惠的网络自由之路</a></li>
-                        <li class="py-2"><a href="/news/article-142372.htm" title="突破网络边界：flyzy小站科学上网全攻略与深度体验">突破网络边界：flyzy小站科学上网全攻略与深度体验</a></li>
+                        <li class="py-2"><a href="/news/article-136723.htm" title="全面解析搬瓦工V2Ray域名：从申请到配置的完整指南">全面解析搬瓦工V2Ray域名：从申请到配置的完整指南</a></li>
+                        <li class="py-2"><a href="/news/article-133750.htm" title="揭秘Shadowrocket负载均衡：智能分流背后的技术奥秘与实战配置指南">揭秘Shadowrocket负载均衡：智能分流背后的技术奥秘与实战配置指南</a></li>
+                        <li class="py-2"><a href="/news/article-134758.htm" title="制霸魔法大陆：《Clash火龙》深度攻略与战术全解">制霸魔法大陆：《Clash火龙》深度攻略与战术全解</a></li>
                         <li class="py-2"><a href="/news/article-139937.htm" title="安卓用户必备：2024年最全科学上网工具指南与深度体验报告">安卓用户必备：2024年最全科学上网工具指南与深度体验报告</a></li>
-                        <li class="py-2"><a href="/news/article-140653.htm" title="深度解析：Quantumult中间按钮消失的全面解决方案">深度解析：Quantumult中间按钮消失的全面解决方案</a></li>
-                        <li class="py-2"><a href="/news/article-144518.htm" title="如何挑选高性价比服务器搭建V2Ray？一份实用指南">如何挑选高性价比服务器搭建V2Ray？一份实用指南</a></li>
-                        <li class="py-2"><a href="/news/article-138150.htm" title="突破网络边界：2023最新科学上网全攻略与深度解析">突破网络边界：2023最新科学上网全攻略与深度解析</a></li>
-                        <li class="py-2"><a href="/news/article-135468.htm" title="斐讯K2路由器安装Clash全攻略：从理论到实践的完整指南">斐讯K2路由器安装Clash全攻略：从理论到实践的完整指南</a></li>
                         <li class="py-2"><a href="/news/article-143789.htm" title="彻底解决v2ray PAC失效难题：从原理到实战的完整指南">彻底解决v2ray PAC失效难题：从原理到实战的完整指南</a></li>
-                        <li class="py-2"><a href="/news/article-137793.htm" title="安卓设备科学上网全攻略：轻松解锁豆瓣优质内容">安卓设备科学上网全攻略：轻松解锁豆瓣优质内容</a></li>
+                        <li class="py-2"><a href="/news/article-132867.htm" title="手机端高效翻墙指南：V2Ray科学上网全攻略">手机端高效翻墙指南：V2Ray科学上网全攻略</a></li>
+                        <li class="py-2"><a href="/news/article-134071.htm" title="安卓免流神器V2RayNG：从零开始掌握免流脚本配置全攻略">安卓免流神器V2RayNG：从零开始掌握免流脚本配置全攻略</a></li>
+                        <li class="py-2"><a href="/news/article-136009.htm" title="深度剖析：Clash代理工具安装失败的根源与终极解决方案">深度剖析：Clash代理工具安装失败的根源与终极解决方案</a></li>
                     </ul>
     </div>
 </div>
@@ -232,7 +232,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">13</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
+                <h4><span class="badge" style="float: right;">19</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">26</span> <a href="/date/2025-07/" title="2025-07 归档">2025-07</a></h4>
