--- a/privacy.htm
+++ b/privacy.htm
@@ -162,16 +162,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-142726.htm" title="2018年8月：突破网络边界的终极科学上网指南">2018年8月：突破网络边界的终极科学上网指南</a></li>
-                        <li class="py-2"><a href="/news/article-142372.htm" title="突破网络边界：flyzy小站科学上网全攻略与深度体验">突破网络边界：flyzy小站科学上网全攻略与深度体验</a></li>
-                        <li class="py-2"><a href="/news/article-138150.htm" title="突破网络边界：2023最新科学上网全攻略与深度解析">突破网络边界：2023最新科学上网全攻略与深度解析</a></li>
+                        <li class="py-2"><a href="/news/article-145245.htm" title="英雄联盟玩家必备：LOL科学上网全攻略与深度解析">英雄联盟玩家必备：LOL科学上网全攻略与深度解析</a></li>
+                        <li class="py-2"><a href="/news/article-137436.htm" title="斐讯K3路由器科学上网全攻略：从基础设置到高级配置详解">斐讯K3路由器科学上网全攻略：从基础设置到高级配置详解</a></li>
                         <li class="py-2"><a href="/news/article-134324.htm" title="解密v2rayng：一款改变网络自由体验的安卓代理神器">解密v2rayng：一款改变网络自由体验的安卓代理神器</a></li>
+                        <li class="py-2"><a href="/news/article-135096.htm" title="深度探索AC2100 Clash：从安装到精通的全方位网络管理指南">深度探索AC2100 Clash：从安装到精通的全方位网络管理指南</a></li>
+                        <li class="py-2"><a href="/news/article-139582.htm" title="SSR与V2Ray的整合艺术：构建自由与安全并重的网络通道">SSR与V2Ray的整合艺术：构建自由与安全并重的网络通道</a></li>
+                        <li class="py-2"><a href="/news/article-134758.htm" title="制霸魔法大陆：《Clash火龙》深度攻略与战术全解">制霸魔法大陆：《Clash火龙》深度攻略与战术全解</a></li>
                         <li class="py-2"><a href="/news/article-144518.htm" title="如何挑选高性价比服务器搭建V2Ray？一份实用指南">如何挑选高性价比服务器搭建V2Ray？一份实用指南</a></li>
-                        <li class="py-2"><a href="/news/article-142004.htm" title="掌握Clash的秘诀：高效记忆与灵活运用的终极指南">掌握Clash的秘诀：高效记忆与灵活运用的终极指南</a></li>
+                        <li class="py-2"><a href="/news/article-136364.htm" title="蚂蚁机场V2Ray终极指南：解锁网络自由的全方位攻略">蚂蚁机场V2Ray终极指南：解锁网络自由的全方位攻略</a></li>
                         <li class="py-2"><a href="/news/article-136009.htm" title="深度剖析：Clash代理工具安装失败的根源与终极解决方案">深度剖析：Clash代理工具安装失败的根源与终极解决方案</a></li>
-                        <li class="py-2"><a href="/news/article-137793.htm" title="安卓设备科学上网全攻略：轻松解锁豆瓣优质内容">安卓设备科学上网全攻略：轻松解锁豆瓣优质内容</a></li>
-                        <li class="py-2"><a href="/news/article-132867.htm" title="手机端高效翻墙指南：V2Ray科学上网全攻略">手机端高效翻墙指南：V2Ray科学上网全攻略</a></li>
-                        <li class="py-2"><a href="/news/article-143430.htm" title="赤瞳clash深度攻略：从入门到精通的全面指南">赤瞳clash深度攻略：从入门到精通的全面指南</a></li>
+                        <li class="py-2"><a href="/news/article-142726.htm" title="2018年8月：突破网络边界的终极科学上网指南">2018年8月：突破网络边界的终极科学上网指南</a></li>
                     </ul>
     </div>
 </div>
@@ -183,7 +183,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">13</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
+                <h4><span class="badge" style="float: right;">19</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">26</span> <a href="/date/2025-07/" title="2025-07 归档">2025-07</a></h4>
